# skillbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  pyproject.toml  skillbot.code-workspace  uv.lock.prod
.github/workflows/: build-deploy.yml  docker-publish.yml
skillbot/: __main__.py  bot.py
src/skillbot/: __init__.py  __main__.py  bot.py  config.py
src/skillbot/cogs/students/: __init__.py  students.py
src/skillbot/cogs/teachers/: __init__.py  teachers.py
src/skillbot/core/: app_command_logger.py  bot.py
src/skillbot/core/config/: __init__.py  settings.py
src/skillbot/core/util/: predicates.py
src/skillbot/db/: models.py  setup.py
