[project]
name = "skillbot"
version = "0.1.0"
description = "A Discord bot for tutoring management and automation."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord-py>=2.6.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.10"]
